# Algos

./: .gitignore  Algos.cabal  CHANGELOG.md  LICENSE
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/environment.-19824/: .ghc.environment.x86_64-mingw32-9.4.8
src/: Deque.lhs  DivideAndConquer.lhs  DynamicProgramming.lhs  Intro.lhs  Poset.lhs  RBTree.lhs  RandomAccessList.lhs  Seq.lhs  _All.hs
src/Jamie/: 1-Intro.lhs  2-Seq.lhs  3-Divide&Conquer.lhs  4-DP.lhs  5-DequeAmortized.lhs  6-RandomAccess.lhs  7-PosetSearching.lhs  8-RBTree.lhs
src/MS Notes/: ADA HS Formatter.hs
