cabal-version:      3.0
name:               Algos
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Max Stoddard
maintainer:         maxdstoddard@icloud.com
category:           Notes
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable Algos
    main-is:  _All.hs

    other-modules:
        Intro
        Seq
        Deque
        DivideAndConquer
        DynamicProgramming
        RandomAccessList
        Poset
        RBTree
    build-depends:
        base >=4.17.2.1 && <4.18
        , array
        -- Add other dependencies here, e.g., containers
    hs-source-dirs:   src
    default-language: GHC2021
